debut de README

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,28 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:compyle.preloader:Loading variables from c:\\Users\\amaur\\twitch_compyle\\.env\n",
-      "DEBUG:compyle.services.routing:Request POST auth, respond with 200 in 0.915s\n",
-      "DEBUG:compyle.services.routing:Request GET game, respond with 200 in 0.260s\n",
-      "DEBUG:compyle.services.routing:Request GET clips, respond with 200 in 0.539s\n",
-      "DEBUG:compyle.services.routing:Request GET clips, respond with 200 in 0.657s\n",
-      "DEBUG:compyle.services.routing:Request GET clips, respond with 200 in 0.555s\n",
-      "DEBUG:compyle.services.routing:Request GET clips, respond with 200 in 0.631s\n",
-      "DEBUG:compyle.services.routing:Request GET clips, respond with 200 in 0.564s\n",
-      "DEBUG:compyle.services.twitch:Parsing stopped, enough clips were found (20)\n",
-      "DEBUG:compyle.services.twitch:Parsing done: 20/~400 of the clips kept in the 3 last days\n",
-      "                                                                  \n",
-      "                                                                  \n",
-      "t:   1%|          | 237/26814 [03:25<1:30:13,  4.91it/s, now=None]"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -36,74 +17,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "                                                                  \n",
-      "                                                                  \n",
-      "t:   1%|          | 237/26814 [03:32<1:30:13,  4.91it/s, now=None]"
+      "                                                                      \r"
      ]
     },
     {
@@ -119,110 +33,52 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A"
+      "                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moviepy - Done !\n",
+      "Moviepy - video ready __temp__.mp4\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "The duration of video __temp__.mp4 (124.0) exceeds the 'maxduration' attribute. You can increase 'maxduration', by passing 'maxduration' parameterto ipython_display function.But note that embedding large videos may take all the memory away !",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 19\u001b[0m\n\u001b[0;32m     16\u001b[0m     videoclips\u001b[39m.\u001b[39mappend(subclip)\n\u001b[0;32m     18\u001b[0m videoclip \u001b[39m=\u001b[39m concatenate_videoclips(videoclips)\n\u001b[1;32m---> 19\u001b[0m videoclip\u001b[39m.\u001b[39;49mipython_display()\n",
+      "File \u001b[1;32mc:\\Users\\amaur\\twitch_compyle\\.venv\\lib\\site-packages\\moviepy\\video\\io\\html_tools.py:220\u001b[0m, in \u001b[0;36mipython_display\u001b[1;34m(clip, filetype, maxduration, t, fps, rd_kwargs, center, **html_kwargs)\u001b[0m\n\u001b[0;32m    217\u001b[0m \u001b[39mif\u001b[39;00m t \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    218\u001b[0m     clip \u001b[39m=\u001b[39m clip\u001b[39m.\u001b[39mto_ImageClip(t)\n\u001b[1;32m--> 220\u001b[0m \u001b[39mreturn\u001b[39;00m HTML2(html_embed(clip, filetype\u001b[39m=\u001b[39mfiletype, maxduration\u001b[39m=\u001b[39mmaxduration,\n\u001b[0;32m    221\u001b[0m             center\u001b[39m=\u001b[39mcenter, rd_kwargs\u001b[39m=\u001b[39mrd_kwargs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mhtml_kwargs))\n",
+      "File \u001b[1;32mc:\\Users\\amaur\\twitch_compyle\\.venv\\lib\\site-packages\\moviepy\\video\\io\\html_tools.py:107\u001b[0m, in \u001b[0;36mhtml_embed\u001b[1;34m(clip, filetype, maxduration, rd_kwargs, center, **html_kwargs)\u001b[0m\n\u001b[0;32m    104\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    105\u001b[0m       \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mUnknown class for the clip. Cannot embed and preview.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m--> 107\u001b[0m     \u001b[39mreturn\u001b[39;00m html_embed(filename, maxduration\u001b[39m=\u001b[39mmaxduration, rd_kwargs\u001b[39m=\u001b[39mrd_kwargs,\n\u001b[0;32m    108\u001b[0m                        center\u001b[39m=\u001b[39mcenter, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mhtml_kwargs)\n\u001b[0;32m    110\u001b[0m filename \u001b[39m=\u001b[39m clip\n\u001b[0;32m    111\u001b[0m options \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin([\u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m%\u001b[39m(\u001b[39mstr\u001b[39m(k), \u001b[39mstr\u001b[39m(v)) \u001b[39mfor\u001b[39;00m k,v \u001b[39min\u001b[39;00m html_kwargs\u001b[39m.\u001b[39mitems()])\n",
+      "File \u001b[1;32mc:\\Users\\amaur\\twitch_compyle\\.venv\\lib\\site-packages\\moviepy\\video\\io\\html_tools.py:142\u001b[0m, in \u001b[0;36mhtml_embed\u001b[1;34m(clip, filetype, maxduration, rd_kwargs, center, **html_kwargs)\u001b[0m\n\u001b[0;32m    140\u001b[0m     duration \u001b[39m=\u001b[39m ffmpeg_parse_infos(filename)[\u001b[39m'\u001b[39m\u001b[39mduration\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m    141\u001b[0m     \u001b[39mif\u001b[39;00m duration \u001b[39m>\u001b[39m maxduration:\n\u001b[1;32m--> 142\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mThe duration of video \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m (\u001b[39m\u001b[39m%.1f\u001b[39;00m\u001b[39m) exceeds the \u001b[39m\u001b[39m'\u001b[39m\u001b[39mmaxduration\u001b[39m\u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m%\u001b[39m(filename, duration)\u001b[39m+\u001b[39m\n\u001b[0;32m    143\u001b[0m                          \u001b[39m\"\u001b[39m\u001b[39mattribute. You can increase \u001b[39m\u001b[39m'\u001b[39m\u001b[39mmaxduration\u001b[39m\u001b[39m'\u001b[39m\u001b[39m, by passing \u001b[39m\u001b[39m'\u001b[39m\u001b[39mmaxduration\u001b[39m\u001b[39m'\u001b[39m\u001b[39m parameter\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    144\u001b[0m                          \u001b[39m\"\u001b[39m\u001b[39mto ipython_display function.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    145\u001b[0m                          \u001b[39m\"\u001b[39m\u001b[39mBut note that embedding large videos may take all the memory away !\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    147\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(filename, \u001b[39m\"\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m    148\u001b[0m     data\u001b[39m=\u001b[39m b64encode(f\u001b[39m.\u001b[39mread())\u001b[39m.\u001b[39mdecode(\u001b[39m\"\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: The duration of video __temp__.mp4 (124.0) exceeds the 'maxduration' attribute. You can increase 'maxduration', by passing 'maxduration' parameterto ipython_display function.But note that embedding large videos may take all the memory away !"
      ]
     }
    ],
    "source": [
-    "from compyle.preloader import launch_after_preload\n",
-    "from main import main\n",
-    "# need pip install -U ipykernel version 6.0.0 or greater \n",
-    "launch_after_preload(main)"
+    "import os.path\n",
+    "from moviepy.editor import *\n",
+    "\n",
+    "videoclips = []\n",
+    "videofile = \"C:\\\\Users\\\\amaur\\\\Videos\\\\2021-03-22 00-49-34.mkv\"\n",
+    "\n",
+    "if os.path.isfile(videofile):\n",
+    "    videoclip = VideoFileClip(videofile)\n",
+    "    subclip_duration = videoclip.duration // 4\n",
+    "    \n",
+    "    for i in range(4):\n",
+    "        start = i * subclip_duration\n",
+    "        end = start + subclip_duration \n",
+    "        subclip = videoclip.subclip(start, end)\n",
+    "        \n",
+    "        videoclips.append(subclip)\n",
+    "    \n",
+    "    videoclip = concatenate_videoclips(videoclips)\n",
+    "    videoclip.ipython_display()"
    ]
   }
  ],
